<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fadeScrollbars="false"
    tools:context=".getDetails">

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="407dp"
        android:layout_height="506dp"
        android:layout_marginBottom="8dp"
        android:background=""
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/getDetailsHeading"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ownerName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ownerNameB"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phoneB"
            android:inputType="phone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mailB"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/location"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/locationB"
            android:inputType="text" />

        <EditText
            android:id="@+id/address"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/details2"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/detailsB"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/price"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/enterB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liner" />

    <Button
        android:id="@+id/back"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/button_rectangle_blue"
        android:text="@string/mainMenuB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>